add separate button for light theme and dark theme

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>test</title>
   </head>
   <body class=darktheme>
-    <button id=themechange>Toggle theme.</button>
+    <button id=lightbutton>Light Theme</button>
+    <button id=darkbutton>Dark Theme</button>
     <h1>Joe's Flashcards</h1>
     <div class="container">
       <div class="row">
