add the first working card with placeholder text, next step is to apply same code to the rest of the cards

--- a/index.html
+++ b/index.html
@@ -6,33 +6,39 @@
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/scripts.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
-    <title>test</title>
+    <title>Joe's Flashcards</title>
   </head>
   <body class=darktheme>
     <button id=lightbutton>Light Theme</button>
     <button id=darkbutton>Dark Theme</button>
     <h1>Joe's Flashcards</h1>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3">
+    <div class="container-fluid">
+      <div class="row-fluid">
+        <div class="col-sm-3">
+          <div class="well">
+            <div id="firstcard">
+              <div class="cardtext">
+                <p id=firstquestion>does this work?</p>
+                <p id=firstanswer>yes it does.</p>
+              </div>
+              <img class=darkcard src="img/cardbackdark.png" alt="a dark-themed card back" width=100%>
+              <img class=lightcard src="img/cardbacklight.png" alt="a light-themed card back" width=100%>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-3">
           <div class="well">
             <img class=darkcard src="img/cardbackdark.png" alt="a dark-themed card back" width=100%>
             <img class=lightcard src="img/cardbacklight.png" alt="a light-themed card back" width=100%>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-sm-3">
           <div class="well">
             <img class=darkcard src="img/cardbackdark.png" alt="a dark-themed card back" width=100%>
             <img class=lightcard src="img/cardbacklight.png" alt="a light-themed card back" width=100%>
           </div>
         </div>
-        <div class="col-md-3">
-          <div class="well">
-            <img class=darkcard src="img/cardbackdark.png" alt="a dark-themed card back" width=100%>
-            <img class=lightcard src="img/cardbacklight.png" alt="a light-themed card back" width=100%>
-          </div>
-        </div>
-        <div class="col-md-3">
+        <div class="col-sm-3">
           <div class="well">
             <img class=darkcard src="img/cardbackdark.png" alt="a dark-themed card back" width=100%>
             <img class=lightcard src="img/cardbacklight.png" alt="a light-themed card back" width=100%>
