add 8 functioning cards with placeholder text, next step is to give each a unique question and answer, as wells as try to apply text scaling.

--- a/index.html
+++ b/index.html
@@ -28,20 +28,88 @@
         </div>
         <div class="col-sm-3">
           <div class="well">
-            <img class=darkcard src="img/cardbackdark.png" alt="a dark-themed card back" width=100%>
-            <img class=lightcard src="img/cardbacklight.png" alt="a light-themed card back" width=100%>
+            <div id="secondcard">
+              <div class="cardtext">
+                <p id=secondquestion>does this work?</p>
+                <p id=secondanswer>yes it does.</p>
+              </div>
+              <img class=darkcard src="img/cardbackdark.png" alt="a dark-themed card back" width=100%>
+              <img class=lightcard src="img/cardbacklight.png" alt="a light-themed card back" width=100%>
+            </div>
           </div>
         </div>
         <div class="col-sm-3">
           <div class="well">
-            <img class=darkcard src="img/cardbackdark.png" alt="a dark-themed card back" width=100%>
-            <img class=lightcard src="img/cardbacklight.png" alt="a light-themed card back" width=100%>
+            <div id="thirdcard">
+              <div class="cardtext">
+                <p id=thirdquestion>does this work?</p>
+                <p id=thirdanswer>yes it does.</p>
+              </div>
+              <img class=darkcard src="img/cardbackdark.png" alt="a dark-themed card back" width=100%>
+              <img class=lightcard src="img/cardbacklight.png" alt="a light-themed card back" width=100%>
+            </div>
           </div>
         </div>
         <div class="col-sm-3">
           <div class="well">
-            <img class=darkcard src="img/cardbackdark.png" alt="a dark-themed card back" width=100%>
-            <img class=lightcard src="img/cardbacklight.png" alt="a light-themed card back" width=100%>
+            <div id="fourthcard">
+              <div class="cardtext">
+                <p id=fourthquestion>does this work?</p>
+                <p id=fourthanswer>yes it does.</p>
+              </div>
+              <img class=darkcard src="img/cardbackdark.png" alt="a dark-themed card back" width=100%>
+              <img class=lightcard src="img/cardbacklight.png" alt="a light-themed card back" width=100%>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row-fluid">
+        <div class="col-sm-3">
+          <div class="well">
+            <div id="fifthcard">
+              <div class="cardtext">
+                <p id=fifthquestion>does this work?</p>
+                <p id=fifthanswer>yes it does.</p>
+              </div>
+              <img class=darkcard src="img/cardbackdark.png" alt="a dark-themed card back" width=100%>
+              <img class=lightcard src="img/cardbacklight.png" alt="a light-themed card back" width=100%>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="well">
+            <div id="sixthcard">
+              <div class="cardtext">
+                <p id=sixthquestion>does this work?</p>
+                <p id=sixthanswer>yes it does.</p>
+              </div>
+              <img class=darkcard src="img/cardbackdark.png" alt="a dark-themed card back" width=100%>
+              <img class=lightcard src="img/cardbacklight.png" alt="a light-themed card back" width=100%>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="well">
+            <div id="seventhcard">
+              <div class="cardtext">
+                <p id=seventhquestion>does this work?</p>
+                <p id=seventhanswer>yes it does.</p>
+              </div>
+              <img class=darkcard src="img/cardbackdark.png" alt="a dark-themed card back" width=100%>
+              <img class=lightcard src="img/cardbacklight.png" alt="a light-themed card back" width=100%>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="well">
+            <div id="eighthcard">
+              <div class="cardtext">
+                <p id=eighthquestion>does this work?</p>
+                <p id=eighthanswer>yes it does.</p>
+              </div>
+              <img class=darkcard src="img/cardbackdark.png" alt="a dark-themed card back" width=100%>
+              <img class=lightcard src="img/cardbacklight.png" alt="a light-themed card back" width=100%>
+            </div>
           </div>
         </div>
       </div>
