add unique question and answer for each card, still have not figured out why the text won't scale. my next idea is to just use a media query

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <button id=lightbutton>Light Theme</button>
     <button id=darkbutton>Dark Theme</button>
     <h1>Joe's Flashcards</h1>
-    <div class="container-fluid">
+    <div class="container">
       <div class="row-fluid">
         <div class="col-sm-3">
           <div class="well">
             <div id="firstcard">
               <div class="cardtext">
-                <p id=firstquestion>does this work?</p>
-                <p id=firstanswer>yes it does.</p>
+                <p id=firstquestion>Which data type can be used in math?</p>
+                <p id=firstanswer>Numbers.</p>
               </div>
               <img class=darkcard src="img/cardbackdark.png" alt="a dark-themed card back" width=100%>
               <img class=lightcard src="img/cardbacklight.png" alt="a light-themed card back" width=100%>
@@ -30,8 +30,8 @@
           <div class="well">
             <div id="secondcard">
               <div class="cardtext">
-                <p id=secondquestion>does this work?</p>
-                <p id=secondanswer>yes it does.</p>
+                <p id=secondquestion>Which data type represents text?</p>
+                <p id=secondanswer>Strings.</p>
               </div>
               <img class=darkcard src="img/cardbackdark.png" alt="a dark-themed card back" width=100%>
               <img class=lightcard src="img/cardbacklight.png" alt="a light-themed card back" width=100%>
@@ -42,8 +42,8 @@
           <div class="well">
             <div id="thirdcard">
               <div class="cardtext">
-                <p id=thirdquestion>does this work?</p>
-                <p id=thirdanswer>yes it does.</p>
+                <p id=thirdquestion>Which data type can only hold 2 possible values?</p>
+                <p id=thirdanswer>Booleans.</p>
               </div>
               <img class=darkcard src="img/cardbackdark.png" alt="a dark-themed card back" width=100%>
               <img class=lightcard src="img/cardbacklight.png" alt="a light-themed card back" width=100%>
@@ -54,8 +54,8 @@
           <div class="well">
             <div id="fourthcard">
               <div class="cardtext">
-                <p id=fourthquestion>does this work?</p>
-                <p id=fourthanswer>yes it does.</p>
+                <p id=fourthquestion>Which data type only has one possible value?</p>
+                <p id=fourthanswer>Undefined.</p>
               </div>
               <img class=darkcard src="img/cardbackdark.png" alt="a dark-themed card back" width=100%>
               <img class=lightcard src="img/cardbacklight.png" alt="a light-themed card back" width=100%>
@@ -68,8 +68,8 @@
           <div class="well">
             <div id="fifthcard">
               <div class="cardtext">
-                <p id=fifthquestion>does this work?</p>
-                <p id=fifthanswer>yes it does.</p>
+                <p id=fifthquestion>What terminal command is used to create a file?</p>
+                <p id=fifthanswer>touch</p>
               </div>
               <img class=darkcard src="img/cardbackdark.png" alt="a dark-themed card back" width=100%>
               <img class=lightcard src="img/cardbacklight.png" alt="a light-themed card back" width=100%>
@@ -80,8 +80,8 @@
           <div class="well">
             <div id="sixthcard">
               <div class="cardtext">
-                <p id=sixthquestion>does this work?</p>
-                <p id=sixthanswer>yes it does.</p>
+                <p id=sixthquestion>What terminal command is used to create a directory?</p>
+                <p id=sixthanswer>mkdir</p>
               </div>
               <img class=darkcard src="img/cardbackdark.png" alt="a dark-themed card back" width=100%>
               <img class=lightcard src="img/cardbacklight.png" alt="a light-themed card back" width=100%>
@@ -92,8 +92,8 @@
           <div class="well">
             <div id="seventhcard">
               <div class="cardtext">
-                <p id=seventhquestion>does this work?</p>
-                <p id=seventhanswer>yes it does.</p>
+                <p id=seventhquestion>Which jQuery method is used for these text animations?</p>
+                <p id=seventhanswer>.slideToggle</p>
               </div>
               <img class=darkcard src="img/cardbackdark.png" alt="a dark-themed card back" width=100%>
               <img class=lightcard src="img/cardbacklight.png" alt="a light-themed card back" width=100%>
@@ -104,8 +104,8 @@
           <div class="well">
             <div id="eighthcard">
               <div class="cardtext">
-                <p id=eighthquestion>does this work?</p>
-                <p id=eighthanswer>yes it does.</p>
+                <p id=eighthquestion>Which code should you edit if you want to change the way something looks?</p>
+                <p id=eighthanswer>CSS</p>
               </div>
               <img class=darkcard src="img/cardbackdark.png" alt="a dark-themed card back" width=100%>
               <img class=lightcard src="img/cardbacklight.png" alt="a light-themed card back" width=100%>
