--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <div class="well">
             <div id="eighthcard">
               <div class="cardtext">
-                <p id=eighthquestion>Which code should you edit if you want to change the way something looks?</p>
+                <p id=eighthquestion>Which code should you edit to change the way something looks?</p>
                 <p id=eighthanswer>CSS</p>
               </div>
               <img class=darkcard src="img/cardbackdark.png" alt="a dark-themed card back" width=100%>
